[package]
name = "kemono"
version = "0.1.0"
edition = "2021"
description = "API Client for the Kemono image API"
readme = "README.md"

[features]
test_live = []

[dependencies]
clap = { version = "4.4.13", features = ["derive", "env"] }
rayon = "1.8.0"
reqwest = { version = "0.11.23", features = ["json", "blocking"] }
retry = "2.0.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["test-util", "macros"] }
